--- a/sections/conclusiones.tex
+++ b/sections/conclusiones.tex
@@ -9,6 +9,8 @@
 
 % Completar
 
+Se podría haber implementado el transformador del driver con un núcleo toroidal. 
+
 Quedó pendiente por implementar el rectificador a la entrada del conversor y el circuito de control.
 
 Las oscilaciones de alta frecuencia (superior a 125kHz) observadas en las formas de onda se pueden deber a cualquier tanque LC. 
