--- a/sections/diseño.tex
+++ b/sections/diseño.tex
@@ -336,9 +336,9 @@ $$ N=\sqrt{\frac{L\times l_0}{A_e\times u_0}}=34\ vueltas $$
 
 \item{Construcción y verificación}
 
-Se bobina el inductor y se mide la inductancia a partir de la constante de tiempo en un circuito RL con una forma de onda cuadrada a la entrada mediante un generador de funciones. 
+Se bobina el inductor y se mide la inductancia en la frecuencia de interés. Mediante un generador de funciones se excita un circuito RL serie con una forma de onda rectangular en su entrada de $f=125kHz$ y $1.5V$ de amplitud.  
 En la figura \ref{fig:osc-inductor-ts} se observa la medición realizada mediante una resistencia de $200\Omega$ con un tiempo de subida de $2.34\mu s$. 
-La inductancia resulta:
+A partir de la constante de tiempo del circuito, la inductancia resulta:
 
 $$ L=R\times\tau=468\mu H $$ 
 
