--- a/sections/conclusiones.tex
+++ b/sections/conclusiones.tex
@@ -14,3 +14,5 @@ Se podría haber implementado el transformador del driver con un núcleo toroida
 Quedó pendiente por implementar el rectificador a la entrada del conversor y el circuito de control.
 
 Las oscilaciones de alta frecuencia (superior a 125kHz) observadas en las formas de onda se pueden deber a cualquier tanque LC. 
+
+Detección de carga completa por intensidad de corriente con corte automático. Limitación del tiempo de carga máximo por temporizador. El estado actual del cargador es indicado por un LED. Cuando el voltaje de entrada es el correcto, este LED se encenderá de forma permanente. Cuando el LED parpadee significa que la salida ha sido cortocircuitada. Si el mismo se encuentra apagado indica que la carga se ha completado o que no hay una batería conectada.
