--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 \usepackage{geometry}
 \usepackage{amsmath}
 \usepackage{svg}
-\usepackage{hyperref}
+\usepackage[hidelinks]{hyperref}
 \usepackage{pdflscape}
 \usepackage{mwe}
 
