--- a/sections/introduccion.tex
+++ b/sections/introduccion.tex
@@ -8,6 +8,7 @@
 
 % Marco teórico
 % En esta sección se presenta el desarrollo llevado a cabo para lograr los objetivos propuestos, haciendo énfasis en los aspectos teóricos que fundamentan el proyecto.
+%En esta sección se desarrollarán los conceptos teóricos necesarios para entender el funcionamiento del cargador.
 
 % PCB
 % A continuación se detallan todos los criterios aplicados para la inclusión de cada componente en el circuito impreso en base a las recomendaciones 
@@ -15,6 +16,9 @@
 
 % Simulaciones del prototipo
 % En esta sección se comparan las formas de onda obtenidas con el circuito una vez implementado, con las simulaciones realizadas para el prototipo.
+
+El cargador de baterías de Litio-Ion es un dispositivo electrónico utilizado para suministrar, mediante diferentes etapas, la corriente y tensión continua necesaria para las celdas que componen una batería recargable de forma tal que la misma recupere su carga energética.
+Este cargador está diseñado para ser utilizado en baterías de Litio-ion/polímero de 36V. Se alimenta de una tensión de 110 a 240V de corriente alterna, a 50 o 60Hz. Presenta siete modos de carga para baterías de 2.2Ah a 13.2Ah, seleccionables por el usuario, que regulan la intensidad de corriente de salida y su potencia máxima es de 282W.
 
 El proyecto surge de la necesidad de cargar la batería de una bicicleta eléctrica con asistencia al pedaleo,
 complementando los proyectos realizados por los alumnos de la cátedra de Proyecto Final durante el año 2021.
